--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
@@ -27,9 +27,7 @@
 		</nav>
 		<div class="app_content mui-content mui-scroll-wrapper" id="refreshContainer">			
 			<div class="mui-scroll">
-				<ul class="mui-table-view mui-table-view-chevron" id="orderList">
-                        
-                </ul>
+				<ul class="mui-table-view mui-table-view-chevron" id="orderList"></ul>                                       
 			</div>
 		</div>
 		<input type="hidden" name="statu" id="statu"/>
