订单管理修改

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
@@ -16,7 +16,7 @@
 	<body>
 		<header class="app_header mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-		    <span id="staOrdSechBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
+		    <span id="OrdSechBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
 		    <p class="app_cf app_nav_text_center">订单列表</p>
 		</header>
 		<nav class="mui-bar mui-bar-tab footClass" id="nav">
