排产bug + 部分优化

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orSearch.html
@@ -97,7 +97,7 @@
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/orderMgmtJs/orSearch.js"></script>
+		<script src="../../js/orderMgmtJs/orSearch.js?time=20181009"></script>
 	</body>
 
 </html>
