--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orDetails.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orDetails.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title>详情</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css" rel="stylesheet" />
+		<link href="../../css/app.css?time=20181009" rel="stylesheet" />
 		<style type="text/css">
 			.mui-content div.content_part li {
 				padding: 0;
@@ -122,7 +122,7 @@
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/orderMgmtJs/orDetails.js"></script>
+		<script src="../../js/orderMgmtJs/orDetails.js?time=20181009"></script>
 	</body>
 
 </html>
