--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordDetail.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordDetail.html
@@ -147,6 +147,35 @@
 					
 				</ul>
 			</div>
+			<div class="mui-input-row">
+				<label>排产类型：</label>
+				<input type="text" id="inSchedultype" class="mui-input-clear" disabled>
+			</div>
+			<div class="mui-input-row inComdty inDetailComdty" id="stockGoods">
+				<div class="labelLf">采购商品：</div>
+				<ul id="purchaseMenu" class="mui-table-view"></ul>									
+			</div>
+			<div class="mui-input-row inComdty inProduction" id="schedulingPlan_forHeader">
+				<div class="labelLf">按订单排产：</div>
+				<div class="mui-row app_bline3">
+					<label class="app_pr0 app_f13">排产记录</label>
+					<ul id="schedulingHeader" class="mui-table-view app_fr app_w70p"></ul>											
+				</div>
+				<div class="schedulingHeaderRemark remark">
+					<label class="app_pr0 app_f13">排产备注：</label>
+				</div>				
+			</div>
+			<div class="mui-input-row inComdty inProduction" id="schedulingPlan_forSku">
+				<div class="labelLf">按商品排产：</div>
+				<ul id="purchaseMenus" class="mui-table-view app_bline3"></ul>
+				<div class="mui-row app_bline3">
+					<label class="app_pr0 app_f13">排产记录</label>
+					<ul id="schedulingHeaders" class="mui-table-view app_fr app_w70p"></ul>											
+				</div>
+				<div class="schedulingHeaderRemarks remark">
+					<label class="app_pr0 app_f13">排产备注：</label>
+				</div>			
+			</div>
 			<div class="mui-input-row staCommodity">
 				<div class="labelLf">商品信息：</div>
 				<ul id="staCommodity" class="mui-table-view app_pl10">
