--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orDetailAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orDetailAmend.html
@@ -93,8 +93,10 @@
 	                    <input type="text" class="mui-input-clear" placeholder="请输入数量" id="reqQty"> 
 	                    <font>*</font>
 	                    </div></li></div></div>
-	                    <button type="submit" class="inAddBtn app_btn_search mui-btn-blue mui-btn-block">删除</button>
-					</div>
+	                    <div class="buttonCont mui-row">
+	                    	<button type="submit" class="inAddBtn app_btn_search mui-btn-blue mui-btn-block">删除</button>
+						</div>
+                    </div>
 					
 				</div>
 			</div>
