订单管理修改

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordDetail.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordDetail.html
@@ -174,9 +174,7 @@
 			</div>
 			<div class="mui-input-row staCommodity">
 				<div class="labelLf">商品信息：</div>
-				<ul id="staCommodity" class="mui-table-view app_pl10">
-					
-				</ul>
+				<ul id="staCommodity" class="mui-table-view app_pl10"></ul>									
 			</div>
 			<!--<div class="mui-input-row app_bline">
 				<div class="labelLf">付款约定：</div>
@@ -232,9 +230,7 @@
 						<input type="text" class="mui-input-clear" id="partCMobile" disabled>
 					</div>
 				</div>
-				<div class="app_p15 app_f12" id="notes">
-					
-				</div>
+				<div class="app_p15 app_f12" id="notes"></div>									
 			</div>
 			
 		</div>
