--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderCheck.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderCheck.html
@@ -117,6 +117,9 @@
 				<label>详细地址：</label>
 				<input type="text" id="staDateilAddress" class="mui-input-clear">
 			</div>
+			<div class="mui-input-row" id="ordLastDate">
+				
+			</div>
 			<div class="mui-input-row">
 				<label>备注：</label>
 				<textarea id="staPoRemark" class="staPoRemark" name="" rows="" cols="">
