订单管理修改

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orDetailAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orDetailAmend.html
@@ -90,8 +90,7 @@
 	                    <div class="mui-input-row"> 
 	                    <label>采购数量:</label> 
 	                    <!--<input type="hidden" class="mui-input-clear" value="'  skuInfo.id  '">--> 
-	                    <input type="text" class="mui-input-clear" placeholder="请输入数量" id="reqQty"> 
-	                    <font>*</font>
+	                    <input type="text" class="mui-input-clear" id="reqQty" disabled> 
 	                    </div></li></div></div>
 	                    <div class="buttonCont mui-row">
 	                    	<button type="submit" class="inAddBtn app_btn_search mui-btn-blue mui-btn-block">删除</button>
