--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderCheck.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderCheck.html
@@ -122,9 +122,10 @@
 			</div>
 			<div class="mui-input-row">
 				<label>备注：</label>
-				<textarea id="staPoRemark" class="staPoRemark" name="" rows="" cols="">
-				</textarea>
-				<button id="addRemarkBtn" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">增加</button>
+				<div id="staPoRemark" class="staPoRemark" name="" rows="" cols="">
+					<ul id="Remarks"></ul>					
+				</div>													
+				<button id="addRemarkBtn" style="margin-top:4px;" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">添加</button>
 			</div>
 			<div class="mui-input-row">
 				<div class="labelLf">状态流程：</div>
