--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
@@ -113,7 +113,10 @@
 			</div>
 			<div class="mui-input-row">
 				<label>备注：</label>
-				<textarea class="app_color40" id="staPoRemark" name="" rows="" cols="" disabled></textarea>
+				<div id="staPoRemark" class="staPoRemark" name="" rows="" cols="">
+					<ul id="Remarks"></ul>					
+				</div>	
+				<button id="addRemarkBtn" style="margin-top:4px;" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">添加</button>
 			</div>
 			<!--<div class="mui-input-row">
 				<div class="labelLf">进展信息：</div>
