--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
@@ -151,11 +151,15 @@
 				</ul>
 			</div>
 			<div class="mui-input-row staCommodity">
-				<div class="labelLf">商品信息：</div>
-				<ul id="staCommodity" class="mui-table-view app_pl10">
-					
-				</ul>
+				<div class="labelLf">订单商品信息：</div>
+				<ul id="staCommodity" class="mui-table-view app_pl10"></ul>	
+				<div class="secSaveBtn">
+					<button id="secDetailBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">
+					     订单商品信息添加
+				    </button>
+				</div>
 			</div>
+			
 			<!--<div class="mui-input-row app_bline">
 				<div class="labelLf">付款约定：</div>
 				<div class="mui-input-row">
@@ -210,14 +214,21 @@
 						<input type="text" class="mui-input-clear" id="partCMobile" disabled>
 					</div>
 				</div>
-				<div class="app_p15 app_f12" id="notes">
-					
-				</div>
+				<div class="app_p15 app_f12" id="notes"></div>									
 			</div>
 			
 		</div>
+		<div class="inSaveBtn">
+			<button id="saveDetailBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">
+				保存
+			</button>
+		</div>					
 		<div class="clear"></div>
 		<input type="hidden" id="supplierId"/>
+		<input type="hidden" name="ordId" id="ordId"/>
+		<input type="hidden" id="orderId"/>
+		<input type="hidden" id="oneOrderId"/>
+		<input type="hidden" id="orderType"/>
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
