--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderList.html
@@ -10,8 +10,8 @@
 		<meta http-equiv="Cache-control" content="no-cache">
 		<meta http-equiv="Cache" content="no-cache">
 		<title>订单列表</title>
-		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css?time=20181008" rel="stylesheet" />
+		<link href="../../../css/mui.min.css" rel="stylesheet" />
+		<link href="../../../css/app.css?time=20181008" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="app_header mui-bar mui-bar-nav">
@@ -35,10 +35,10 @@
 		<input type="hidden" name="statu" id="statu"/>
 		<input type="hidden" name="source" id="source"/>
 		<input type="hidden" name="flag" id="flag"/>
-		<script src="../../js/component/zepto.min.js"></script>
-		<script src="../../js/component/mui.min.js"></script>
-		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/orderMgmtJs/orderList.js"></script>
+		<script src="../../../js/component/zepto.min.js"></script>
+		<script src="../../../js/component/mui.min.js"></script>
+		<script src="../../../js/component/GHutils.js"></script>
+		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/orderList.js"></script>
 
 	</body>
 </html>
