列表：新加审核状态、修复了按钮不显示点击却跳转页面的问题

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordDetail.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordDetail.html
@@ -175,7 +175,7 @@
 					<label class="app_pr0 app_f13">排产备注：</label>
 				</div>			
 			</div>
-			<div class="mui-input-row staCommodity">
+			<div class="mui-input-row staCommodity app_bline2">
 				<div class="labelLf">商品信息：</div>
 				<ul id="staCommodity" class="mui-table-view app_pl10"></ul>									
 			</div>
