订单管理修改

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
@@ -229,6 +229,7 @@
 		<input type="hidden" id="orderId"/>
 		<input type="hidden" id="oneOrderId"/>
 		<input type="hidden" id="orderType"/>
+		<input type="hidden" id="statuPath"/>
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
