流水列表 + 流水详情

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orScheduling.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orScheduling.html
@@ -17,7 +17,7 @@
 		</header>
 		<div class="mui-content mui-input-group">
 			<div class="mui-input-row">
-				<label>备货单号：</label>
+				<label>订单/备货单号：</label>
 				<input type="text" id="schedOrdNum" disabled>
 			</div>
 			<div class="mui-input-row" id="orderTypebox">
