订单管理修改

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
@@ -39,7 +39,7 @@
 			</div>
 			<div class="mui-input-row">
 				<label>运费：</label>
-				<input type="text" class="mui-input-clear" id="staFreight" disabled>
+				<input type="text" class="mui-input-clear" id="staFreight">
 			</div>
 			<div class="mui-input-row">
 				<label>万户币抵扣：</label>
@@ -118,26 +118,6 @@
 				</div>	
 				<button id="addRemarkBtn" style="margin-top:4px;" type="submit" class="comChoiceBtn mui-btn-blue mui-btn-block">添加</button>
 			</div>
-			<!--<div class="mui-input-row">
-				<div class="labelLf">进展信息：</div>
-				<div class="labelParent">
-					<ul class="labelRi ">
-						<li class="app_pr">
-							<div>首付款支付</div>
-							<div>全部支付</div>
-							<span class="mui-icon mui-icon-arrowthinright app_pa nextTxt01"></span>
-						</li>
-						<li class="app_pr app_t12">
-							<div class="app_pr">供货中</div>
-							<span class="mui-icon mui-icon-arrowthinright app_pa nextTxt02"></span>
-						</li>
-						<li>
-							<div>采购中</div>
-							<div>已发货</div>
-						</li>
-					</ul>
-				</div>
-			</div>-->
 			<div class="mui-input-row">
 				<div class="labelLf">状态流程：</div>
 				<ul class="flowPath" id="staEvoMenu">
@@ -230,6 +210,16 @@
 		<input type="hidden" id="oneOrderId"/>
 		<input type="hidden" id="orderType"/>
 		<input type="hidden" id="statuPath"/>
+		<input type="hidden" id="custId"/>
+		<input type="hidden" id="invStatus"/>
+		<input type="hidden" id="bizStatus"/>
+		<input type="hidden" id="bizType"/>
+		<input type="hidden" id="plateformId"/>
+		<input type="hidden" id="shiptoAddr"/>
+		<input type="hidden" id="orderType"/>
+		<input type="hidden" id="address"/>
+		<input type="hidden" id="staPoLastDas"/>
+		<input type="hidden" id="staPototals"/>
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
