--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderinfoAdd.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderinfoAdd.html
@@ -28,7 +28,7 @@
 				<div class="labelLf">订单商品：</div>
 				<div class="app_pl15 mui-row app_bline2 inComdty inAddComdty" id="commodityMenu">
 					
-					<div class="mui-row app_bline"> 
+					<!--<div class="mui-row app_bline"> 
 						<div class="mui-row lineStyle"> 
 	                    <li class="mui-table-view-cell app_bline3"> 
 	                    <div class="mui-input-row "> 
@@ -94,8 +94,7 @@
 	                    <div class="mui-col-sm-6 mui-col-xs-6"> 
 	                    <li class="mui-table-view-cell app_bline3"> 
 	                    <div class="mui-input-row"> 
-	                    <label>采购数量:</label> 
-	                    <!--<input type="hidden" class="mui-input-clear" value="'  skuInfo.id  '">--> 
+	                    <label>采购数量:</label>  
 	                    <input type="text" class="mui-input-clear" id="reqQty" disabled> 
 	                    </div></li></div></div>
 	                    <div class="buttonCont mui-row">
@@ -103,7 +102,7 @@
 	                    		删除
 	                    	</button>
 						</div>
-                    </div>					
+                    </div>					-->
 				</div>
 			</div>
 			<div class="mui-input-row ordCommodity">
