流水列表：权限+查询

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseList.html
@@ -16,7 +16,7 @@
 	<body>
 		<header class="app_header mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-		    <span id="OrdSechBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
+		    <span id="orWaterSechBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
 		    <p class="app_cf app_nav_text_center">线下支付流水列表</p>
 		</header>
 		<nav class="mui-bar mui-bar-tab footClass" id="nav">
@@ -38,6 +38,6 @@
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
-		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/ordwaterCourse.js"></script>
+		<script src="../../../js/orderMgmtJs/OrdermgmtHtmljs/ordwaterCourseList.js"></script>
 	</body>
 </html>
