备货单bug 测试号在备货单列表按钮不能点击的问题

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAmend.html
@@ -9,9 +9,8 @@
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
-
 			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-			<p class="app_cf app_nav_text_center">备货单修改</p>
+			<p id="changeHeader" class="app_cf app_nav_text_center"></p>
 		</header>
 		<div class="mui-content mui-input-group" id="payMents">
 			<div class="mui-input-row">
