--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseCheck.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseCheck.html
@@ -45,6 +45,7 @@
 			</div>
 		</div>
 		<input type="hidden" id="courseId"/>
+		<input type="hidden" name="orderId" id="orderId"/>
 		<div class="clear"></div>
 		<script src="../../../js/component/mui.min.js"></script>	
 		<script src="../../../js/component/zepto.min.js"></script>
