--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseList.html
@@ -32,9 +32,10 @@
                 </ul>
 			</div>
 		</div>
-		<!--<input type="hidden" name="statu" id="statu"/>
-		<input type="hidden" name="source" id="source"/>
+		<!--<input type="text" name="orderId" id="orderId" style="position: fixed;bottom:100px;z-index: 10;"/>-->
+		<!--<input type="hidden" name="source" id="source"/>
 		<input type="hidden" name="flag" id="flag"/>-->
+		<div class="clear"></div>
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
