订单管理修改

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseCheck.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseCheck.html
@@ -34,6 +34,10 @@
 				<input type="text" class="mui-input-clear" id="unlineMoney" disabled>
 			</div>
 			<div class="mui-input-row">
+				<label>实收金额：</label>
+				<input type="text" class="mui-input-clear" id="realMoney" disabled>
+			</div>
+			<div class="mui-input-row">
 				<label>流水状态：</label>
 				<input type="text" class="app_cred3 mui-input-clear" id="orWaterStatus" disabled>
 			</div>
