--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orDetailAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orDetailAmend.html
@@ -95,11 +95,10 @@
 	                    <li class="mui-table-view-cell app_bline3"> 
 	                    <div class="mui-input-row"> 
 	                    <label>采购数量:</label> 
-	                    <!--<input type="hidden" class="mui-input-clear" value="'  skuInfo.id  '">--> 
 	                    <input type="text" class="mui-input-clear" id="reqQty" disabled> 
 	                    </div></li></div></div>
 	                    <div class="buttonCont mui-row">
-	                    	<button type="submit" class="inAddBtn app_btn_search mui-btn-blue mui-btn-block">
+	                    	<button type="submit" class="addSkuButton inAddBtn app_btn_search mui-btn-blue mui-btn-block">
 	                    		删除
 	                    	</button>
 						</div>
