--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderinfoAdd.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderinfoAdd.html
@@ -40,6 +40,8 @@
 			</button>
 		</div>
 		<div class="clear"></div>
+		<input type="hidden" name="skuInfoid" id="skuInfoid"/>
+		<input type="hidden" name="detaId" id="detaId"/>
 		<script src="../../../js/component/mui.min.js"></script>
 		<script src="../../../js/component/zepto.min.js"></script>
 		<script src="../../../js/component/GHutils.js"></script>
