订单审核修改

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryAddList.html
@@ -14,6 +14,16 @@
 		</header>
 		<div class="mui-content mui-input-group">
 			<div class="mui-input-row">
+				<label>备货单类型：</label>
+                <div class="pre">
+					<select class="secStyle" name="" id="headerType">
+						<option value=""></option>
+					</select>
+					<input class="savedata" type="hidden" value=''>
+					<div style="clear:both"></div>
+				</div>
+		    </div>
+			<div class="mui-input-row">
 				<label>备货方：</label>
 		    	<div id="changeTxt" class="labelri inStock">
 		    		采购中心备货
