备货单类型添加

--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inventoryDetails.html
@@ -17,6 +17,10 @@
 				<label>备货单编号：</label>
 				<input type="text" class="mui-input-clear" id="inPoordNum" disabled>
 			</div>
+			<div class="mui-input-row">
+				<label>备货单类型：</label>
+				<input type="text" class="mui-input-clear" id="headerType" disabled>
+			</div>
 			<div class="mui-input-row" id="orderTypebox">
 				<label>备货方：</label>
 				<div id="changeTxt" class="labelri inStock">
@@ -134,6 +138,6 @@
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/inventoryMagmetJs/inventoryDetails.js?time=20181008"></script>
+		<script src="../../js/inventoryMagmetJs/inventoryDetails.js?time=20181018"></script>
 	</body>
 </html>
