--- a/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
+++ b/src/main/webapp/static/mobile/html/inventoryMagmetHtml/inCheck.html
@@ -17,6 +17,10 @@
 				<label>备货单编号：</label>
 				<input type="text" class="mui-input-clear" id="inPoordNum" disabled>
 			</div>
+			<div class="mui-input-row">
+				<label>备货单类型：</label>
+				<input type="text" class="mui-input-clear" id="headerType" disabled>
+			</div>
 			<div class="mui-input-row" id="orderTypebox">
 				<label>备货方：</label>
 				<div id="changeTxt" class="labelri inStock">
@@ -210,6 +214,6 @@
 	<script src="../../js/component/mui.min.js"></script>
 	<script src="../../js/component/zepto.min.js"></script>
 	<script src="../../js/component/GHutils.js"></script>
-	<script src="../../js/inventoryMagmetJs/inCheck.js?time=20181010"></script>
+	<script src="../../js/inventoryMagmetJs/inCheck.js?time=20181018"></script>
     </body>
 </html>
