--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orDetailAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orDetailAmend.html
@@ -14,7 +14,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-			<p class="app_cf app_nav_text_center">订单修改</p>
+			<p class="app_cf app_nav_text_center">订单商品修改</p>
 		</header>
 		<div class="mui-content mui-input-group">
 			<div class="mui-input-row commodityClear" id="ordAmendPoLastDaDiv">
