--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordDetail.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordDetail.html
@@ -150,6 +150,10 @@
 					
 				</ul>
 			</div>
+			<div class="mui-input-row" id="inPaylistbox">
+				<div class="labelLf">支付信息：</div>
+				<ul id="inPaylist" class="mui-table-view"></ul>
+			</div>
 			<div class="mui-input-row">
 				<label>排产类型：</label>
 				<input type="text" id="inSchedultype" class="mui-input-clear" disabled>
