--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
@@ -151,6 +151,10 @@
 					
 				</ul>
 			</div>
+			<div class="mui-input-row" id="inPaylistbox">
+				<div class="labelLf">支付信息：</div>
+				<ul id="inPaylist" class="mui-table-view"></ul>
+			</div>
 			<div class="mui-input-row staCommodity">
 				<div class="labelLf">订单商品信息：</div>
 				<ul id="staCommodity" class="mui-table-view app_pl10"></ul>	
