--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseList.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/ordwaterCourseList.html
@@ -15,14 +15,15 @@
 	</head>
 	<body>
 		<header class="app_header mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
+			<!--mui-action-back--> 
+		    <a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf" id="back"></a>
 		    <span id="orWaterSechBtn" class="mui-icon mui-icon-search mui-pull-right app_cf"></span>
 		    <p class="app_cf app_nav_text_center">线下支付流水列表</p>
 		</header>
 		<nav class="mui-bar mui-bar-tab footClass" id="nav">
 			<a class="mui-tab-item app_cf staHomePage">
 				<span class="mui-icon mui-icon-home"></span>
-				<span class="mui-tab-label">返回首页</span>
+				<span class="mui-tab-label">返回订单列表</span>
 			</a>
 		</nav>
 		<div class="app_content mui-content mui-scroll-wrapper" id="refreshContainer">			
