--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/OrdermgmtHtml/orderAmend.html
@@ -88,15 +88,6 @@
 				<label>身份证：</label>
 				<div id="insuppliercardID"></div>	
 			</div>
-			<!--<div class="mui-input-row">
-				<label>发票状态：</label>
-				<input type="text" class="mui-input-clear" id="staInvoice" disabled>
-			</div>-->
-			<!--<div class="mui-input-row">
-				<label>业务状态：</label>
-				<input type="text" class="mui-input-clear doubleInput app_cred3" id="staFinal" disabled>
-				<input type="text" class="mui-input-clear doubleInput" id="staStatus" disabled>
-			</div>-->
 			<div class="mui-input-row">
 				<label>发票状态：</label>
 				<div class="pre">
@@ -141,15 +132,11 @@
 			</div>
 			<div class="mui-input-row">
 				<div class="labelLf">状态流程：</div>
-				<ul class="flowPath" id="staEvoMenu">
-					
-				</ul>
+				<ul class="flowPath" id="staEvoMenu"></ul>									
 			</div>
 			<div class="mui-input-row">
 				<div class="labelLf">审核流程：</div>
-				<ul class="" id="staCheckMenu">
-					
-				</ul>
+				<ul class="" id="staCheckMenu"></ul>									
 			</div>
 			<div class="mui-input-row" id="inPaylistbox">
 				<div class="labelLf">支付信息：</div>
@@ -160,7 +147,7 @@
 				<ul id="staCommodity" class="mui-table-view app_pl10"></ul>	
 				<div class="secSaveBtn">
 					<button id="secDetailBtn" type="submit" class="app_btn_search mui-btn-blue mui-btn-block">
-					     订单商品信息添加
+					         订单商品信息添加
 				    </button>
 				</div>
 			</div>
