确认排产、详情

--- a/src/main/webapp/static/mobile/html/orderMgmtHtml/orAmend.html
+++ b/src/main/webapp/static/mobile/html/orderMgmtHtml/orAmend.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>支出信息列表详情</title>
+		<title>支出信息列表修改</title>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
-		<link href="../../css/app.css?time=20181009" rel="stylesheet" />
+		<link href="../../css/app.css?time=20181022" rel="stylesheet" />
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-back mui-pull-left app_cf"></a>
-			<p class="app_cf app_nav_text_center">详情</p>
+			<p class="app_cf app_nav_text_center">修改</p>
 		</header>
 		<div class="mui-content mui-input-group">
 			<div class="mui-input-row">
@@ -33,9 +33,9 @@
 				<label>交货地点：</label>
 		    	<div id="changeTxt" class="labelri inStock">
 		    		采购中心
-			        <input id="fromType1" type="radio" name="fromType" value="0"/ class="inputRadio" disabled>
+			        <input id="fromType1" type="radio" name="fromType" value="0"/ class="inputRadio">
                     供应商  
-			        <input id="fromType2" type="radio" name="fromType" value="1"/ class="inputRadio" disabled>
+			        <input id="fromType2" type="radio" name="fromType" value="1"/ class="inputRadio">
 		        </div>	
 		    </div>
 			<div class="mui-input-row remark">
@@ -87,6 +87,6 @@
 		<script src="../../js/component/mui.min.js"></script>
 		<script src="../../js/component/zepto.min.js"></script>
 		<script src="../../js/component/GHutils.js"></script>
-		<script src="../../js/orderMgmtJs/orDetails.js?time=20181009"></script>
+		<script src="../../js/orderMgmtJs/orAmend.js?time=20181022"></script>
 	</body>
 </html>
